# cms

./: .coderabbit.yaml  .env.example  .gitignore  .nxignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  docker-compose.test.yml  nx.json  package.json  skills-lock.json
.claude/: launch.json
.github/: dependabot.yml  renovate.json
apps/backend/: Cargo.toml  build.rs  project.json
apps/backend/migrations/mysql/: 20260501000000_initial_schema.sql  20260502000000_webhooks.sql  20260503000000_nullable_webhook_actors.sql  20260610000000_auth_rbac.sql  20260611000000_add_perf_indexes.sql  20260616000000_roles_v2.sql  20260617000000_backups.sql  20260618000000_search_index_queue.sql  20260619000000_instance_settings.sql  20260721000000_tokens_deployments_storage.sql
apps/backend/migrations/postgres/: 20260501000000_initial_schema.sql  20260502000000_webhooks.sql  20260503000000_nullable_webhook_actors.sql  20260530000000_add_files_mime_type_index.sql  20260610000000_auth_rbac.sql  20260616000000_roles_v2.sql  20260617000000_backups.sql  20260618000000_search_index_queue.sql  20260619000000_instance_settings.sql  20260620000000_webhook_enabled.sql  20260721000000_tokens_deployments_storage.sql
apps/backend/migrations/sqlite/: 20260501000000_initial_schema.sql  20260502000000_webhooks.sql  20260503000000_nullable_webhook_actors.sql  20260530000000_add_files_mime_type_index.sql  20260610000000_auth_rbac.sql  20260611000000_add_perf_indexes.sql  20260616000000_roles_v2.sql  20260617000000_backups.sql  20260618000000_search_index_queue.sql  20260619000000_instance_settings.sql  20260620000000_webhook_enabled.sql  20260721000000_tokens_deployments_storage.sql
apps/backend/src/: cli.rs  config.rs  diagnostics.rs  error.rs  lib.rs  main.rs  paths.rs  runtime.rs  secrets.rs  server.rs  signed_upload.rs  test_helpers.rs  tls.rs  tracing.rs
apps/backend/src/database/: backend.rs  mod.rs  pool.rs
apps/backend/src/database/schema/: mysql.sql  postgres.sql
apps/backend/src/graphql/: context.rs  loaders.rs  mod.rs  schema.rs
apps/backend/src/graphql/mutation/: collection.rs  entry.rs  file.rs  mod.rs  webhook.rs
apps/backend/src/graphql/query/: mod.rs
apps/backend/src/graphql/types/: collection.rs  entry.rs  json.rs  mod.rs  site.rs  webhook.rs
apps/backend/src/grpc/: auth.rs  interceptor.rs  mod.rs  server.rs
apps/backend/src/grpc/cms/: cms.v1.rs  mod.rs
apps/backend/src/grpc/services/: admin_membership.rs  admin_site.rs  admin_webhook.rs  collection.rs  entry.rs  file.rs  mod.rs  singleton.rs
apps/backend/src/handlers/: access_token_handler.rs  auth_handler.rs  backup_handler.rs  collection_handler.rs  dashboard_handler.rs  deployment_handler.rs  entry_handler.rs  file_handler.rs  instance_handler.rs  settings_handler.rs  singleton_handler.rs  site_handler.rs  storage_profile_handler.rs  webhook_handler.rs
apps/backend/src/mcp/: auth.rs  mod.rs  schema.rs  server.rs
apps/backend/src/mcp/resources/: mod.rs  site_schema.rs
apps/backend/src/mcp/tools/: collection.rs  entry.rs  file.rs  member.rs  mod.rs  singleton.rs  site.rs  token.rs  webhook.rs
apps/backend/src/mcp/transports/: http.rs  mod.rs  stdio.rs
apps/backend/src/middleware/: api_auth.rs  auth.rs  authz.rs  dashboard_auth.rs  error.rs  rate_limit.rs  site_resolver.rs
apps/backend/src/models/: access_token.rs  authorization.rs  collection.rs  deployment.rs  entry.rs  file.rs  session.rs  site.rs  storage_profile.rs  user.rs  webhook.rs
apps/backend/src/repository/: error.rs  mod.rs  traits.rs
apps/backend/src/repository/mysql/: access_token.rs  collection.rs  entry.rs  file.rs  mod.rs  session.rs  site.rs  user.rs  webhook.rs
apps/backend/src/repository/postgres/: access_token.rs  collection.rs  entry.rs  file.rs  mod.rs  session.rs  site.rs  user.rs  webhook.rs
apps/backend/src/repository/sqlite/: access_token.rs  collection.rs  entry.rs  file.rs  mod.rs  session.rs  site.rs  user.rs  webhook.rs
apps/backend/src/router/: access_tokens.rs  auth.rs  backup.rs  collections.rs  dashboard.rs  deployments.rs  docs.rs  entry.rs  files.rs  graphql.rs  health.rs  instance.rs  mcp.rs  mod.rs  openapi.rs  singleton.rs  sites.rs  webhooks.rs
apps/backend/src/service/: linux.rs  macos.rs  mod.rs  status.rs  windows.rs
apps/backend/src/services/: access_token.rs  auth.rs  authorization.rs  collection.rs  definition_validation.rs  deployment.rs  entry.rs  error.rs  file.rs  mod.rs  scope.rs  settings.rs  singleton.rs  site.rs  storage_profile.rs  webhook.rs
apps/backend/src/services/backup/: meta.rs  mod.rs  schedule.rs  scheduler.rs  schema.rs
apps/backend/src/services/search/: indexer.rs  mod.rs  queue.rs  schema.rs
apps/backend/src/storage/: filesystem.rs  mod.rs  s3.rs  trait_def.rs
apps/backend/src/utils/: content_types.rs  diff.rs  magic_bytes.rs  mod.rs
apps/backend/tests/: file_service_tests.rs  mcp_stdio.rs  mock_user_repository.rs
apps/backend/tests/common/: auth.rs  client.rs  fixtures.rs  grpc.rs  mcp.rs  mod.rs  server.rs  test_db.rs
apps/backend/tests/graphql/: auth_tests.rs  collections_tests.rs  entries_tests.rs  files_tests.rs  main.rs  sites_tests.rs  webhooks_tests.rs
apps/backend/tests/grpc/: collections_tests.rs  entries_tests.rs  files_tests.rs  main.rs  singletons_tests.rs  sites_tests.rs  webhooks_tests.rs
apps/backend/tests/grpc/common/: mod.rs
apps/backend/tests/mcp/: collection_tests.rs  entry_tests.rs  file_tests.rs  main.rs  protocol_tests.rs  resource_tests.rs  singleton_tests.rs  site_tests.rs  stdio_proxy_tests.rs  webhook_tests.rs
apps/backend/tests/mcp/mcp_helpers/: mod.rs
apps/backend/tests/rest/: access_tokens_tests.rs  auth_tests.rs  backups_tests.rs  collections_tests.rs  entries_tests.rs  files_tests.rs  health_tests.rs  main.rs  roles_tests.rs  settings_tests.rs  singletons_tests.rs  sites_tests.rs  storage_profiles_tests.rs  webhooks_tests.rs
assets/: logo.avif
dashboard/: README.md  biome.json  index.html  package.json
packaging/: README.md
proto/: admin.proto  cms.proto  site.proto
src/: config.rs  error.rs  (+4 more)
(+400 files in other folders)
