[package]
name = "rusty-react"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.19"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
