[package]
name = "cms"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["multipart", "cookie"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
rust-embed = "8"
mime_guess = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres", "mysql", "sqlite", "chrono", "uuid"] }
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.19"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "avif"] }
object_store = { version = "0.13", features = ["aws"] }
bytes = "1"
http = "1"
regex = "1"
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
cookie = "0.18"


[dependencies.tonic]
version = "0.12"
features = ["prost"]

[dependencies.prost]
version = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
opt-level = "s"
lto = "thin"
panic = "abort"
strip = true
