[package]
name = "cms"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["embed-dashboard"]
embed-dashboard = ["dep:rust-embed"]

[dependencies]
axum = "0.8"
axum-extra = { version = "0.12", features = ["multipart", "cookie"] }
time = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
rust-embed = { version = "8", optional = true }
mime_guess = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "postgres", "mysql", "sqlite", "chrono", "uuid", "migrate"] }
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.19"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "avif"] }
object_store = { version = "0.13", features = ["aws"] }
bytes = "1"
http = "1"
regex = "1"
json-patch = "4"
async-graphql = { version = "7", features = ["chrono", "uuid", "dataloader"] }
async-graphql-axum = "7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
cookie = "0.18"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
dashmap = "6"
url = "2"
reqwest = { version = "0.13", features = ["json", "cookies", "multipart"] }
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14.5"
tonic-reflection = "0.14"
tonic-health = "0.14"
http-body-util = "0.1.3"
rmcp = { version = "1.6", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
tokio-util = { version = "0.7", features = ["rt"] }
schemars = "1"
clap = { version = "4.6.1", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "1.1.2"
directories = "6.0.0"
zstd = "0.13"
tar = "0.4"
croner = "2"

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tokio-stream = { version = "0.1", features = ["net"] }
wiremock = "0.6"
